--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "npx nodemon --development",
+    "dev": "NODE_ENV=development npx nodemon",
+    "dev:staging": "NODE_ENV=staging npx nodemon",
+    "dev:production": "NODE_ENV=production npx nodemon",
     "build": "rimraf ./dist && tsc && tsc-alias",
-    "start": "node dist/index.js --production",
+    "start:dev": "NODE_ENV=development node dist/index.js",
+    "start:staging": "NODE_ENV=staging node dist/index.js",
+    "start:production": "NODE_ENV=production node dist/index.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prettier": "prettier --check .",
@@ -24,6 +28,8 @@
     "@types/mime": "^3.0.4",
     "@types/minimist": "^1.2.5",
     "@types/node": "^20.12.8",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
     "eslint": "^8.57.0",
@@ -38,17 +44,26 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.577.0",
+    "@aws-sdk/client-ses": "^3.577.0",
+    "@aws-sdk/lib-storage": "^3.578.0",
     "axios": "^1.6.8",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.2.0",
     "express-validator": "^7.0.1",
     "formidable": "^3.5.1",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mime": "^3.0.0",
     "minimist": "^1.2.8",
     "mongodb": "^6.6.0",
-    "sharp": "^0.33.3"
+    "sharp": "^0.33.3",
+    "socket.io": "^4.7.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
+    "yaml": "^2.4.2"
   }
 }
