--- a/package.json
+++ b/package.json
@@ -4,13 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=development npx nodemon",
-    "dev:staging": "NODE_ENV=staging npx nodemon",
-    "dev:production": "NODE_ENV=production npx nodemon",
+    "dev": "npx nodemon",
     "build": "rimraf ./dist && tsc && tsc-alias",
-    "start:dev": "NODE_ENV=development node dist/index.js",
-    "start:staging": "NODE_ENV=staging node dist/index.js",
-    "start:production": "NODE_ENV=production node dist/index.js",
+    "start": "node dist/index.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prettier": "prettier --check .",
