--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,8 +14,8 @@ jobs:
       - name: 'Create env file'
         run: echo "${{ secrets.TWITTER_ENV_PRODUCTION }}" > .env
       - name: Build the Docker image
-        run: docker build --progress=plain -t atd/twitter-clone:v0 .
+        run: docker build --progress=plain -t atd1311/twitter-clone:v0 .
       - name: Log in to Docker Hub
         run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
       - name: Push the Docker image
-        run: docker push atd/twitter-clone:v0
+        run: docker push atd1311/twitter-clone:v0
